<?xml version="1.0"?>
<package format="2">
  <name>vi_turtlebot</name>
  <version>0.0.1</version>
  <description>Visual topological navigation for turtlebot.</description>
  <maintainer email="f.bloechliger@gmail.ch">fabianbl</maintainer>
  <license>closed</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>costmap_2d</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>multiagent_mapping_common</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>topological_mapping</depend>
  <depend>topological_planning_ros</depend>
</package>
